chore(readme): begin list of similar projects
If you're interested in this project, other maildir-related projects might be of interest.

--- a/README.org
+++ b/README.org
@@ -17,3 +17,7 @@ This can be installed with a Go installation.
 #+BEGIN_EXAMPLE
 go install github.com/terinjokes/mailpail
 #+END_EXAMPLE
+
+* Related Projects
+
+- [[https://github.com/holygeek/fetchpost][holygeek/fetchpost]]: Preserve Hacker News posts and comments as maildir.
